# benchmarks

./: .env.template  .gitignore  README.md  base_runner.py  costs_calculations.py  evaluate_runs.py  pyproject.toml  run_mem0_longmemeval.py  run_recallr_longmemeval.py  run_supermemory_longmemeval.py  upgrade_packages.py
data/locomo/: download_locomo.sh
data/longmemeval/: download_longmemeval.sh
evaluations/mem0/longmemeval/oracle/: 0_temporal-reasoning_pass_1.json  100_multi-session_pass_1.json  101_multi-session_pass_1.json  102_multi-session_pass_1.json  103_multi-session_pass_1.json  104_multi-session_pass_1.json  105_multi-session_pass_1.json  106_multi-session_pass_1.json  107_multi-session_pass_1.json  108_multi-session_pass_1.json  109_multi-session_pass_1.json  10_temporal-reasoning_pass_1.json  110_multi-session_pass_1.json  111_multi-session_pass_1.json  112_multi-session_pass_1.json  113_multi-session_pass_1.json  114_multi-session_pass_1.json  115_multi-session_pass_1.json  116_multi-session_pass_1.json  117_multi-session_pass_1.json  118_multi-session_pass_1.json  119_multi-session_pass_1.json  (+478 more)
playground/: recallr_ingest.py
playground/customer/: session_1.json  session_2.json  session_3.json  session_4.json  session_5.json
playground/healthcare/: .env.template  session_1.json  session_2.json  session_3.json  session_4.json  session_5.json
playground/legal/: session_1.json  session_2.json  session_3.json  session_4.json  session_5.json
playground/mentor/: session_1.json  session_2.json  session_3.json  session_4.json  session_5.json
(+2500 files in other folders)
